# API-ETL-Azure

./: README.md  bitcoin.json  exemplo01.py  exemplo02.py  exemplo03.py  exemplo05.py  notes_API_do_zero_ETL.ipynb  pyproject.toml  requirements.txt
app/: dashboard_01.py
exemplos/: exemplo04.py
src/: database.py  pipeline00.py  pipeline01.py  pipeline02.py  pipeline03.py  requirements.txt
